--- a/commonbase/src/main/res/values/strings.xml
+++ b/commonbase/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="location_open">开启定位</string>
     <string name="location_retry">重试定位</string>
     <string name="location_retry_error">定位出错了，请稍后重试</string>
+    <string name="loading">加载中。。。</string>
 
 </resources>
